--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-body {
-  background-color: #282c34;
+  background-color:gray;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,22 +35,13 @@
 }
 
 #enterbutton:hover{
-  color:gray
+  color:darkslategray
 }
 
 
 
-
-
-
-
-
-
-
-
-
 .nav {
-  background-color: white;
+  background-color:white;
   color: black;
   position: sticky;
   top: 0px;
@@ -100,17 +91,15 @@
 }
 
 
-
-
-.btn-one {
-  color: red;
+.nav-item {
+  color: bla;
   transition: all 0.3s;
   position: relative;
 }
-.btn-one span {
+.nav-item span {
   transition: all 0.3s;
 }
-.btn-one::before {
+.nav-item::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -125,49 +114,24 @@
   border-top-style: solid;
   border-bottom-style: solid;
   border-top-color: rgba(255,255,255,0.5);
-  border-bottom-color: rgba(255,255,255,0.5);
+  border-bottom-color: rgb(0, 0, 0);
   transform: scale(0.1, 1);
 }
-.btn-one:hover span {
+.nav-item:hover span {
   letter-spacing: 2px;
 }
-.btn-one:hover::before {
+.nav-item:hover::before {
   opacity: 1; 
   transform: scale(1, 1); 
 }
-.btn-one::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  transition: all 0.3s;
-  background-color: rgba(255,255,255,0.1);
-}
-.btn-one:hover::after {
+.nav-item:hover::after {
   opacity: 0; 
   transform: scale(0.1, 1);
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 :root {
-  --aboutBackgroundColor: #282c34;
+  --aboutBackgroundColor: gray;
   }
 
 .about-page {
