--- a/src/App.css
+++ b/src/App.css
@@ -7,48 +7,24 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+:root {
+  --homeBackgroundColor: cornflowerblue;
+  --aboutTextColor: black;
+  --aboutBackgroundColor: blanchedalmond;
+  --sectionTwoBackgroundColor: white;
   }
-}
 
-.App-body {
-  background-color:gray;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.2em;
-  color: white;
-  font-family: 'Avenir', 'Helvetica';
-
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-#enterbutton{
-  cursor: pointer;
-}
-
-#enterbutton:hover{
-  color:darkslategray
-}
-
-
+  /* NAV BAR */
 
 .nav {
-  background-color:white;
+  background-color:var(--homeBackgroundColor);
   color: black;
   position: sticky;
   top: 0px;
   width: 100%;
   height: 50px;
   z-index: 1000;
-  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -90,7 +66,6 @@
   cursor: pointer;
 }
 
-
 .nav-item {
   color: bla;
   transition: all 0.3s;
@@ -109,7 +84,7 @@
   z-index: 1;
   opacity: 0;
   transition: all 0.3s;
-  border-top-width: 1px;
+  border-top-width: 0px;
   border-bottom-width: 1px;
   border-top-style: solid;
   border-bottom-style: solid;
@@ -129,23 +104,59 @@
   transform: scale(0.1, 1);
 }
 
+/* HOME PAGE */
 
-:root {
-  --aboutBackgroundColor: gray;
-  }
+.App-body {
+  background-color: var(--homeBackgroundColor);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2em;
+  color: white;
+  font-family: 'Avenir', 'Helvetica';
+
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+#enterbutton{
+  cursor: pointer;
+}
+
+#enterbutton:hover{
+  color:darkslategray
+}
+
+/* WHITE SECTION */
+.white-section{
+  min-height: 100vh;
+  background-color: var(--sectionTwoBackgroundColor);
+  position:relative;
+  display: flex;
+  justify-content: center;
+}
+
+
+/* ABOUT PAGE */
 
 .about-page {
-  color:white;
+  color:var(--aboutTextColor);
   background-color: var(--aboutBackgroundColor);
-
+  position: absolute;
+  top: -100px;
+  max-width: 80vw;
+  min-height: 70vh;
 }
 
 .about-row {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  min-height: 100vh;
-  margin: 0
+  margin: 0;
 }
 
 .about-text-col {
@@ -231,8 +242,6 @@
 }
 
 
-
-
 #Hive {
   color: #73a4f4;
   background-color: var(--aboutBackgroundColor);
@@ -246,6 +255,8 @@
   color:maroon
 }
 
+
+/* RESUME PAGE */
 
 .resume-page {
   color:white;
@@ -277,16 +288,5 @@
   justify-content: center;
 }
 
-
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
