--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,6 @@
   width: 100%;
   height: 50px;
   z-index: 1000;
-  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -67,6 +66,7 @@
 }
 
 .nav-logo {
+  background-color:var(--sectionOneBackgroundColor);
   position: absolute;
   left: 40px;
   align-items: center;
@@ -83,6 +83,7 @@
 }
 
 .nav-content {
+  background-color:var(--sectionOneBackgroundColor);
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -92,11 +93,13 @@
 }
 
 .nav-text-container{
+  background-color:var(--sectionOneBackgroundColor);
   display: flex;
   margin-right: 40px
 }
 
 .nav-item {
+  background-color:var(--sectionOneBackgroundColor);
   min-width: 100px;
   color:black;
 }
